--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             apk add --update \
               git composer openssh-client
             composer install --no-scripts
-            php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 -d www --no-scripts --dev
+            php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
       - persist_to_workspace:
           root: /var/www/app/
           paths:
