--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,41 +16,41 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: composer-{{ checksum "/var/www/app/www/composer.json" }}
+          key: composer-{{ checksum "/var/www/app/composer.json" }}
       - run:
           name: install
           command: |
             apk add --update \
               git composer openssh-client
-            composer install --no-scripts -d www
-            php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 -d www --no-scripts --dev
+            composer install --no-scripts
+            php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
       - persist_to_workspace:
-          root: /var/www/app/www/
+          root: /var/www/app/
           paths:
             - ./*
       - save_cache:
-          key: composer-{{ checksum "/var/www/app/www/composer.json" }}
-          paths: /var/www/app/www/vendor/
+          key: composer-{{ checksum "/var/www/app/composer.json" }}
+          paths: /var/www/app/vendor/
   tests:
     <<: *x-common-php
     steps:
       - attach_workspace:
-          at: /var/www/app/www/
+          at: /var/www/app/
       - run:
           name: PHP Unit
           command: |
             vendor/bin/phpunit
-          working_directory: www/
+          working_directory: /var/www/app/
   php-cs:
     <<: *x-common-php
     steps:
       - attach_workspace:
-          at: /var/www/app/www/
+          at: /var/www/app/
       - run:
           name: PHP CS Fixer
           command: |
-            vendor/bin/php-cs-fixer fix --dry-run --diff
-          working_directory: www/
+            vendor/bin/php-cs-fixer fix --dry-run --diff  --allow-risky=yes
+          working_directory: /var/www/app/
 
 workflows:
   version: 2
