--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^7.3",
-        "symfony/http-client": "^5.0",
+        "symfony/http-client": "^4.0|^5.0",
+        "symfony/validator": "^4.0|^5.0",
         "monolog/monolog": "^2.0"
     },
     "require-dev": {
