--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
               git composer openssh-client
             composer install --no-scripts
             php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
+            apk add --update icu-dev
+            docker-php-ext-configure intl
+            docker-php-ext-install intl
       - persist_to_workspace:
           root: /var/www/app/
           paths:
