--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.3",
+        "ext-intl": "*",
         "symfony/http-client": "^4.0|^5.0",
         "symfony/validator": "^4.0|^5.0",
         "monolog/monolog": "^2.0"
