--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ x-common: &x-common-php
     - image: php:7.3.2-fpm-alpine3.8
       environment:
         APP_ENV: test
-      command: ['apk add --update icu-dev', 'docker-php-ext-configure intl','docker-php-ext-install intl']
   working_directory: /var/www/app
 
 jobs:
@@ -21,8 +20,9 @@ jobs:
       - run:
           name: install
           command: |
-            apk add --update \
-              git composer openssh-client
+            apk add --update git composer openssh-client icu-dev
+            docker-php-ext-configure intl
+            docker-php-ext-install intl
             composer install --no-scripts
             php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
       - persist_to_workspace:
