--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "monolog/monolog": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
