fix: remove icu intl install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,7 @@ jobs:
       - run:
           name: install
           command: |
-            apk add --update git composer openssh-client icu-dev
-            docker-php-ext-configure intl
-            docker-php-ext-install intl
+            apk add --update git composer openssh-client
             composer install --no-scripts
             php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
       - persist_to_workspace:
@@ -43,9 +41,6 @@ jobs:
       - run:
           name: PHP Unit
           command: |
-            apk add --update icu-dev
-            docker-php-ext-configure intl
-            docker-php-ext-install intl
             vendor/bin/phpunit
           working_directory: /var/www/app/
   php-cs:
