--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,10 @@ orbs:
 
 x-common: &x-common-php
   docker:
-    - image: php:7.3.2-fpm-alpine3.8
+    - image: docker.pkg.github.com/puwnz/google-maps-lib/php-7.3-intl:latest
+      auth:
+        username: GuigZ-
+        password: $GITHUB_TOKEN
       environment:
         APP_ENV: test
   working_directory: /var/www/app
@@ -20,8 +23,7 @@ jobs:
       - run:
           name: install
           command: |
-            apk add --update \
-              git composer openssh-client
+            apk add --update git composer openssh-client
             composer install --no-scripts
             php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^2.15 --no-scripts --dev
       - persist_to_workspace:
@@ -39,9 +41,6 @@ jobs:
       - run:
           name: PHP Unit
           command: |
-            apk add --update icu-dev
-            docker-php-ext-configure intl
-            docker-php-ext-install intl
             vendor/bin/phpunit
           working_directory: /var/www/app/
   php-cs:
