--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
     ],
     "require": {
         "php": "^7.3",
+        "ext-intl": "*",
         "symfony/http-client": "^4.0|^5.0",
         "symfony/validator": "^4.0|^5.0",
         "monolog/monolog": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
