--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ x-common: &x-common-php
   docker:
     - image: docker.pkg.github.com/puwnz/google-maps-lib/php-7.3-intl:latest
       auth:
-        username: GuigZ-
+        username: $CIRCLE_USERNAME
         password: $GITHUB_TOKEN
       environment:
         APP_ENV: test
