--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 x-common: &x-common-php
   docker:
-    - image: docker.pkg.github.com/puwnz/google-maps-lib/php-7.3-intl:latest
+    - image: puwnz/php-intl:7.3-alpine
       auth:
         username: $CIRCLE_USERNAME
         password: $GITHUB_TOKEN
