fix(circle): upgrade image (#23)
* fix(circle): upgrade image

* fix(hub): remove auth

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,7 @@ orbs:
 
 x-common: &x-common-php
   docker:
-    - image: docker.pkg.github.com/puwnz/google-maps-lib/php-7.3-intl:latest
-      auth:
-        username: $CIRCLE_USERNAME
-        password: $GITHUB_TOKEN
+    - image: puwnz/php-intl:7.3-alpine
       environment:
         APP_ENV: test
   working_directory: /var/www/app
