--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
     "require": {
         "php": "^7.3",
         "ext-intl": "*",
+        "ext-json": "*",
+        "monolog/monolog": "^2.0",
+        "symfony/cache": "^4.0|^5.0",
         "symfony/http-client": "^4.0|^5.0",
-        "symfony/validator": "^4.0|^5.0",
-        "monolog/monolog": "^2.0"
+        "symfony/validator": "^4.0|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
