--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,21 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "ext-intl": "*",
         "ext-json": "*",
-        "monolog/monolog": "^1|^2",
-        "symfony/cache": "^4.0|^5.0",
-        "symfony/http-client": "^4.0|^5.0",
-        "symfony/validator": "^4.0|^5.0"
+        "monolog/monolog": "^1|^2|^3",
+        "symfony/cache": "^4.0|^5.0|^6.0",
+        "symfony/http-client": "^4.0|^5.0|^6.0",
+        "symfony/validator": "^4.0|^5.0|^6.0",
+        "symfony/serializer": "^4.0|^5.0|^6.0",
+        "symfony/property-access": "^5.4|^6.0 ",
+        "webmozart/assert": "^1.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^2.16 || ^3.0"
+        "phpunit/phpunit": "^9.6",
+        "friendsofphp/php-cs-fixer": "^3.62",
+        "rector/rector": "^1.2"
     },
     "autoload": {
         "psr-4": {
