--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 x-common: &x-common-php
   docker:
-    - image: puwnz/php-intl:7.3-alpine
+    - image: php:8.1-fpm-alpine3.20
       environment:
         APP_ENV: test
   working_directory: /var/www/app
