--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,16 @@ jobs:
   prepare:
     <<: *x-common-php
     steps:
+      - run:
+            name: Install GIT
+            command: |
+                apk add --update git composer openssh-client
       - checkout
       - restore_cache:
           key: composer-{{ checksum "/var/www/app/composer.json" }}
       - run:
           name: install
           command: |
-            apk add --update git composer openssh-client
             composer install --no-scripts
             php -d memory_limit=-1 $(which composer) require friendsofphp/php-cs-fixer=^3.0 --no-scripts --dev
       - persist_to_workspace:
